--- a/index.html
+++ b/index.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Validator.py : A library for validating that dictionary values meet certain sets of parameters. Much like form validators, but for dicts." />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
 
-    <title>Validator.py</title>
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Validator.py by mansam</title>
   </head>
 
   <body>
+    <a id="forkme_banner" href="https://github.com/mansam/validator.py">View on GitHub</a>
+    <div class="shell">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mansam/validator.py">View on GitHub</a>
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Validator.py</h1>
+            <h2>A library for validating that dictionary values meet certain sets of parameters. Much like form validators, but for dicts.</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-          <h1 id="project_title">Validator.py</h1>
-          <h2 id="project_tagline">A library for validating that dictionary values meet certain sets of parameters. Much like form validators, but for dicts.</h2>
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/mansam/validator.py/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/mansam/validator.py/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/mansam/validator.py/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/mansam/validator.py/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <h1>
 <a name="validatorpy-" class="anchor" href="#validatorpy-"><span class="octicon octicon-link"></span></a>validator.py <a href="https://travis-ci.org/mansam/validator.py"><img src="https://travis-ci.org/mansam/validator.py.png?branch=master" alt="Build Status"></a>
 </h1>
@@ -376,17 +391,21 @@
 
 <p>For more information, please visit <a href="http://github.com/mansam/validator.py">http://github.com/mansam/validator.py</a> or contact me at <a href="mailto:mansam@csh.rit.edu">mansam@csh.rit.edu</a>. You can also send me a message on freenode if you have any questions.</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Validator.py maintained by <a href="https://github.com/mansam">mansam</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/mansam">mansam</a> can be found on <a href="https://github.com/mansam/validator.py">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
 
     
-
   </body>
 </html>
